# bounded-kan

./: LICENSE  README.md  demo_deep.py  pyproject.toml
demo/: demo.py  demo_deep.py
src/bounded-kan/: __init__.py  kan.py
src/bounded_kan/: __init__.py  kan.py
src/physkan/: __init__.py  demonstrator.py  interaction.py  kan.py
