[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physkan"
version = "0.1.0"
description = "A physics-constrained Kolmogorov-Arnold Network with bounded latent spaces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 100
lint.pydocstyle.convention = "google"
lint.extend-select = [
    "I", # isort
    "D", # docstrings
    "W291", # trailing whitespace
    "W292", # end-of-file newline
    "W293", # whitespace in empty line
]
lint.ignore = [
    "D100", # undocumented-public-module; methods and classes is enough
    "D101", # missing docstring in public method
    "D102", # missing docstring in public class
    "D105", # undocumented-magic-method; fine if obvious, otherwise comment
    "D107", # undocumented-public-init; would like to still enforce arg docs (D417) for these but doesn't work
    "D205", # blank line between summary and description
    "E731", # lambda-assignment; fine if used sparingly
    "E741", # ambiguous-variable-name (l, O, I); fine if used locally
]
